[package]
name = "libp2p-tcp"
edition = "2018"
description = "TCP/IP transport protocol for libp2p"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-std = { version = "1.0", optional = true, default-features = false }
futures = "0.3.1"
futures-timer = "2.0"
get_if_addrs = { version = "0.5.3", optional = true }
ipnet = "2.0.0"
libp2p-core = { version = "0.15.0", path = "../../core" }
log = "0.4.1"
tokio = { version = "0.2", default-features = false, features = ["tcp"], optional = true }

[features]
default = ["async-std", "get_if_addrs"]
